syntax = "proto3";

package protogen;

service InternalApiService {
    rpc PingCall (PingRequest) returns (PingAnswer);
    rpc FindContactCall (FindContactRequest) returns (FindContactAnswer);
    rpc FindDataCall (FindDataRequest) returns (FindDataAnswer);
    rpc StoreDataCall (StoreDataRequest) returns (StoreDataAnswer);
}

// Messages

message PingRequest {
    bytes sender_kademlia_id = 1;
}

message PingAnswer {
    bytes receiver_kademlia_id = 1;
}

message FindContactRequest {
    Contact src = 1;
    bytes searched_contact_id = 2;
    int32 nb_neighbors = 3;
}

message FindContactAnswer {
    repeated Contact contacts = 1;
}

message FindDataRequest {
    Contact src = 1;
    bytes searched_file_id = 2;
    int32 nb_neighbors = 3;
}

message FindDataAnswer {
    oneof answer {
        bytes data_found = 1;
        FindContactAnswer data_not_found = 2;
    }
}

message StoreDataRequest{
    Contact src = 1;
    bytes data = 3;
}

message StoreDataAnswer{
    bool ok = 1;
}

// Types

message Contact {
    bytes ID = 1;
	string Address = 2;
}
